# incortype

./: README.md  dune-project  meta-config.json
coersion/: coersion.ml  coersion_aux.ml  coersion_cty.ml  coersion_lit.ml  coersion_qualifier.ml  coersion_rty.ml  coersion_structure.ml  coersion_termlang.ml  dune
data/parsing/: 1.ml  rty.ml
data/predefined/: builtin_normal_typing.ml  (+1 more)
env/: env.ml
example/: dune  exset.ml
formalization/: BasicTyping.v  BasicTypingProp.v  CoreLang.v  CoreLangProp.v  Denotation.v  DenotationProp.v  Instantiation.v  OperationalSemantics.v  PrimOpSemantics.v  RefinementType.v  Typing.v  _CoqProject
frontend/: aux.ml  dune  pty.ml  to_connective.ml  to_cty.ml  to_expr.ml  to_lit.ml  to_op.ml  to_pty.ml  to_qualifier.ml  to_rty.ml  to_structure.ml  to_type_dec.ml
language/: dune  language.ml
lib/: dune
manual/: .lia.cache  leftist_heap.v  list_set.v  rr.hs  unbalanced_set.v
normalization/: decurry.ml  denormalize.ml  dune  normalize.ml
ntypecheck/: aux.ml  ctycheck.ml  dune  litcheck.ml  ntypecheck.ml  qualifiercheck.ml  rtycheck.ml  ttypecheck.ml
smtquery/: check.ml  dune  litencoding.ml  propencoding.ml  smtquery.ml
subtyping/: dune  prefix.ml  sub.ml  subcty.ml  subtyping.ml
syntax/: connective.ml  constant.ml  corelang.ml  cpslang.ml  cty.ml  dune  langlike.ml  lit.ml  op.ml  qualifier.ml  rty.ml  structure.ml  syntax.ml  termlang.ml  type_dec.ml  typectx.ml
test/: denotation.v  dune
typecheck/: bidirectional.ml  bitypectx.ml  dune  dune.back  linear_typectx.ml  type_ctx.ml  typeerr.ml  typingaux.ml
(+7 files in other folders)
