(library
 (name frontend)
 (wrapped false)
 (libraries utils syntax normal5ty core ocaml5_parser env)
 (modules
   to_id
   to_op
   to_const
   to_pat
   to_expr
   aux
   to_lit
   to_connective
   to_qualifier
   to_type_dec
   to_structure
   to_cty
   pty
   to_pty
   to_rty
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert))
 (inline_tests)
)
